@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_capi.h,v 1.10 2001-06-25 01:49:47 daniel Exp $
+ * $Id: mitab_capi.h,v 1.11 2001-07-02 20:03:28 daniel Exp $
  *
  * Name:     mitab_capi.h
  * Project:  MapInfo TAB Read/Write library
@@ -32,7 +32,10 @@
  **********************************************************************
  *
  * $Log: mitab_capi.h,v $
- * Revision 1.10  2001-06-25 01:49:47  daniel
+ * Revision 1.11  2001-07-02 20:03:28  daniel
+ * Added mitab_c_get_text().
+ *
+ * Revision 1.10  2001/06/25 01:49:47  daniel
  * Added get methods for all pen, brush, font and symbol properties.
  *
  * Revision 1.9  2001/01/22 16:03:59  warmerda
@@ -155,6 +158,9 @@ mitab_c_set_field( mitab_feature, int field_index, const char * value );
     
 void MITAB_DLL
 mitab_c_set_text( mitab_feature feature, const char * text );
+const char MITAB_DLL *
+mitab_c_get_text( mitab_feature feature );
+
 void MITAB_DLL
 mitab_c_set_text_display( mitab_feature feature,
                           double angle, double height, double width,
@@ -201,7 +207,7 @@ mitab_c_get_brush_transparent( mitab_feature feature );
 void MITAB_DLL
 mitab_c_set_font( mitab_feature feature, const char * font_name );
 const char MITAB_DLL *
-mitab_c_get_font( mitab_feature feature, const char * fontname );
+mitab_c_get_font( mitab_feature feature );
 
 void MITAB_DLL mitab_c_set_symbol( mitab_feature feature, int symbol_no,
                                    int symbol_size, int symbol_color );
